--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -47,9 +46,10 @@
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".TimelineActivity"
-            android:label="@string/title_activity_timeline"></activity>
+        <activity
+            android:name=".TimelineActivity"
+            android:label="@string/title_activity_timeline" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
