--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         applicationId "com.codepath.apps.restclienttemplate"
         minSdkVersion 16
         targetSdkVersion 23
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -18,12 +19,19 @@ android {
     }
 }
 
+//ext {
+//    supportLibVersion = '23.4.0'
+//}
+
+
 repositories {
     jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 dependencies {
+
+//    compile 'com.android.tools.build:gradle:2.1.0'
     compile fileTree(dir: 'libs', include: '*.jar')
     compile('com.codepath.libraries:android-oauth-handler:1.0.0@aar') {
         transitive = true
@@ -36,4 +44,12 @@ dependencies {
     // ActiveAndroid for simple persistence with an ORM
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+
+//    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+//    compile "com.android.support:design:${supportLibVersion}"
+//    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+//    compile "com.android.support:percent:${supportLibVersion}"
+//    compile "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
+//    compile "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
+//    compile "com.android.support:support-annotations:${supportLibVersion}"
 }
