--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -19,9 +20,9 @@ android {
     }
 }
 
-//ext {
-//    supportLibVersion = '23.4.0'
-//}
+ext {
+    supportLibVersion = '23.4.0'  // variable that can be referenced to keep support libs consistent
+}
 
 
 repositories {
@@ -30,8 +31,6 @@ repositories {
 }
 
 dependencies {
-
-//    compile 'com.android.tools.build:gradle:2.1.0'
     compile fileTree(dir: 'libs', include: '*.jar')
     compile('com.codepath.libraries:android-oauth-handler:1.0.0@aar') {
         transitive = true
@@ -44,12 +43,13 @@ dependencies {
     // ActiveAndroid for simple persistence with an ORM
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:percent:${supportLibVersion}"
+    compile "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
+    compile "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
+    compile "com.android.support:support-annotations:${supportLibVersion}"
+    compile 'com.android.support:support-v4:23.1.1'
 
-//    compile "com.android.support:appcompat-v7:${supportLibVersion}"
-//    compile "com.android.support:design:${supportLibVersion}"
-//    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
-//    compile "com.android.support:percent:${supportLibVersion}"
-//    compile "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
-//    compile "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
-//    compile "com.android.support:support-annotations:${supportLibVersion}"
 }
