--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     // Android Async Http for sending async network requests
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'jp.wasabeef:picasso-transformations:2.1.0'
+    // If you want to use the GPU Filters
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     // ActiveAndroid for simple persistence with an ORM
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
